--- a/chenlei/test1.html
+++ b/chenlei/test1.html
@@ -9,6 +9,7 @@
   <script>
     console.log('placeholder1');
     console.log('placeholder2');
+    console.log('placeholder3');
   </script>
 </body>
 </html>
