--- a/chenlei/test1.html
+++ b/chenlei/test1.html
@@ -10,6 +10,7 @@
     console.log('placeholder1');
     console.log('placeholder2');
     console.log('placeholder3');
+    console.log('placeholder4');
   </script>
 </body>
 </html>
