--- a/chenlei/test1.html
+++ b/chenlei/test1.html
@@ -11,6 +11,7 @@
     console.log('placeholder2');
     console.log('placeholder3');
     console.log('placeholder4');
+    console.log('placeholder5');
   </script>
 </body>
 </html>
