--- a/chenlei/test1.html
+++ b/chenlei/test1.html
@@ -12,6 +12,7 @@
     console.log('placeholder3');
     console.log('placeholder4');
     console.log('placeholder5');
+    console.log('placeholder6');
   </script>
 </body>
 </html>
