--- a/chenlei/test1.html
+++ b/chenlei/test1.html
@@ -13,6 +13,7 @@
     console.log('placeholder4');
     console.log('placeholder5');
     console.log('placeholder6');
+    console.log('test-commit-message');
   </script>
 </body>
 </html>
