--- a/chenlei/test1.html
+++ b/chenlei/test1.html
@@ -14,6 +14,7 @@
     console.log('placeholder5');
     console.log('placeholder6');
     console.log('test-commit-message');
+    console.log('test-commit-message-2');
   </script>
 </body>
 </html>
