--- a/chenlei/test1.html
+++ b/chenlei/test1.html
@@ -15,6 +15,7 @@
     console.log('placeholder6');
     console.log('test-commit-message');
     console.log('test-commit-message-2');
+    console.log('test-commit-message-3');
   </script>
 </body>
 </html>
